Quiz and Search

--- a/resources/sass/tablet/_all.scss
+++ b/resources/sass/tablet/_all.scss
@@ -23,6 +23,7 @@
 @import '../../themes/tablet/modules/comments';
 @import '../../themes/tablet/modules/rate';
 @import '../../themes/tablet/modules/videos';
+@import '../../themes/tablet/modules/news';
 @import '../../themes/tablet/modules/media';
 @import '../../themes/tablet/modules/maps';
 @import '../../themes/tablet/modules/call';
@@ -30,6 +31,9 @@
 @import '../../themes/tablet/modules/share';
 @import '../../themes/tablet/modules/settings';
 @import '../../themes/tablet/modules/search';
+@import '../../themes/tablet/modules/newsletter';
+@import '../../themes/tablet/modules/question';
+@import '../../themes/tablet/modules/quiz';
 
 /**********************************************************************************************************************/
 /*
