--- a/resources/themes/tablet/modules/_videos.scss
+++ b/resources/themes/tablet/modules/_videos.scss
@@ -65,6 +65,7 @@
 					color: #ffffff;
 					font-weight: normal;
 					margin: 0 0 5px 0;
+					padding-top: 10px;
 				}
 				.stats{
 					@include wbz-box-pack(start);
