--- a/resources/themes/tablet/modules/_quiz.scss
+++ b/resources/themes/tablet/modules/_quiz.scss
@@ -38,8 +38,8 @@
 	}
 	
 	.quiz-top p{
-		margin: 0 30px 40px 30px;
-		padding: 20px 0 0 0;
+		margin: 0 30px 0px 30px;
+		padding: 20px 0 20px 0;
 		font-size: 15px;
 	}
 	
@@ -176,7 +176,7 @@
 				font-size: 22px;
 				line-height: 24px;
 				color: white;
-				margin: 20px 30px 30px 30px;
+				padding: 20px 30px 30px 30px;
 			}
 			
 			.x-form-fieldset{
@@ -208,7 +208,7 @@
 				-webkit-box-flex: 0!important;
 				
 				.x-field-input .x-field-mask{
-					top: -20px;
+					top: -17px;
 					right: 16px;
 				}
 				
