--- a/resources/themes/tablet/modules/_search.scss
+++ b/resources/themes/tablet/modules/_search.scss
@@ -31,6 +31,8 @@
 .search-list{
 	margin: 0;
 	background: #f6f6f8;
+	z-index: 2;
+	box-shadow: 0px 0px 7px #888;
 	
 	@media all and (orientation: landscape){
 		width: 300px;
