--- a/resources/themes/tablet/modules/_videos.scss
+++ b/resources/themes/tablet/modules/_videos.scss
@@ -32,6 +32,8 @@
 .videos-list{
 	margin: 0;
 	background: #f6f6f8;
+	z-index: 2;
+	box-shadow: 0px 0px 7px #888;
 	
 	@media all and (orientation: landscape){
 		width: 300px;
